Bug 122708 - UI: Template manager, no highlighting when the focus is inside the template preview window (using keyboard)
Summary: UI: Template manager, no highlighting when the focus is inside the template p...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3 all versions
Hardware: All All
: medium normal
Assignee: Katarina Behrens
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords:
Depends on:
Blocks: Template-Manager Impress-UX
  Show dependency treegraph
 
Reported: 2019-01-14 15:45 UTC by Telesto
Modified: 2022-02-01 19:39 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-01-14 15:45:52 UTC
Description:
UI: Template manager, no highlighting when the focus is inside the template preview window (using keyboard)

Steps to Reproduce:
1. Open Impress (with template manager enabled or press CTRL+SHIFT+N)
2. Press tab 2x - Focus in the template selector window, but invisible
3. Press Arrow (blue selector appears)

Actual Results:
No visual feedback where the focus is

Expected Results:
Blue selector (without a keypress)


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: 6e5c4001c7b5cab2b2cc6419072acbe5fa7cb04a
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Durgapriyanka 2019-01-14 17:29:15 UTC
Thank you for reporting the bug. I can confirm this bug in

Version: 6.3.0.0.alpha0+
Build ID: 3c964980da07892a02d5ac721d80558c459532d0
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-12-12_02:07:45
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-01-16 17:20:16 UTC
Also reproduced in

Version: 5.3.0.0.alpha1+
Build ID: 4136757b4e51c4e6f7cb4132c95538a7f831ef2c
CPU Threads: 4; OS Version: Linux 4.15; UI Render: default; VCL: gtk2; Layout Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 3 sdc.blanco 2020-12-29 23:58:54 UTC
Reproduced in Impress (but not in Writer) using 7.2.0.0.alpha0+
Comment 4 Commit Notification 2022-01-29 08:59:49 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4bb0ffa4684dada708ecdf727f4fc9f500a9bced

tdf#122708: on GetFocus, select something also when items are filtered

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-02-01 19:39:45 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/3b79c7347d14756e072265b39081bc3866e1196d

tdf#122708: on GetFocus, select something also when items are filtered

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.