tdf#122708: on GetFocus, select something also when items are filtered

Previously if nothing was selected, we picked item with ID 1 to
select/highlight. But if a filter is active, such item may not
match the active filter (case in point: document template no. 1
matches 'Writer templates' filter, but not 'Impress templates' one)

Try harder to find an item to select by looking at the list of
filtered items too

Change-Id: I9cb053b884dc724c7a6199ec002d83024ed83976
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129117
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <bubli@bubli.org>